--- a/config/locales/bn.yml
+++ b/config/locales/bn.yml
@@ -48,3 +48,6 @@ bn:
 
       এটি নির্ধারণ করতে আমরা যে পদক্ষেপগুলি গ্রহণ করেছি তা এখানে:
       {url}
+  smooch_bot_disabled_checkpoint: |-
+      এই বার্তা পাঠানোর জন্য আপনাকে ধন্যবাদ।
+      আমরা কোনো যাচাই প্রতিবেদন পাঠাতে অক্ষম, কারণ চেকপয়েন্ট এই টিপলাইনটি আর ব্যবহার করছে না।
