--- a/config/locales/te.yml
+++ b/config/locales/te.yml
@@ -46,3 +46,7 @@ te:
   smooch_bot_result_changed: |-
       [వెరిఫికేషన్ రిపొర్ట్ - దిద్దుబాటు] మీరు పంపిన మెస్సెజ్ %{previous_status}నుంచి
       %{status}అని మారినది. ఈ విధముగా గుర్తించడానికి మేము అనుసరించిన విధానము %{url}
+  smooch_bot_disabled_checkpoint: |-
+      ఈ మెసేజ్ పంపినందుకు ధన్యవాదములు.
+
+      ప్రాజెక్ట్ చెక్-పాయింట్ ఇంక ఈ టిప్-లైన్ ను భారత సాధారణ ఎన్నికల సమయములొ తప్పుడు సమాచర ప్రసరణను విశ్లేషించుటకు ఉపయొగించటములేదు. కావున మేము ఇక మీదట మీకు ధ్రువీకరణ రిపొర్ట్స్ పంపలేము.
