--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -45,3 +45,6 @@ hi:
   smooch_bot_meme: आपके द्वारा भेजी गई सामग्री के आधार पर हमने एक मीम तैयार किया है जिसके तथ्यों की जांच के लिए आपने अनुरोध किया था। इसके बारे में और अधिक जानें %{url}
   smooch_bot_result_changed: |-
       [सत्यापन रिपोर्ट - सुधार] आपके द्वारा हमारे साथ साझा किया संदेश बदल गया है *%{previous_status}* से *%{status}* इसे निर्धारित करने के लिए हमने यहां पहल की है:%{url}
+  smooch_bot_disabled_checkpoint: |-
+      संदेश भेजने के लिए धन्यवाद।
+      हम किसी भी सत्यापन रिपोर्ट को वापस भेजने में अब असमर्थ हैं, क्योंकि भारत में आम चुनावों के दौरान गलत जानकारी का अध्ययन करने के लिए प्रोजेक्ट चेकप्वाइंट अब इस टिपलाइन का उपयोग नहीं कर रहा है।
