--- a/config/locales/ml.yml
+++ b/config/locales/ml.yml
@@ -144,3 +144,6 @@ ml:
       *%{status}*
 
       എന്നാക്കി മാറ്റിയിരിക്കുന്നു. ഈ നിഗമനത്തിലെത്താന്‍ ഞങ്ങള്‍ സ്വീകരിച്ച മാര്‍ഗ്ഗം ഇതാണ്  3 %{url}.
+  smooch_bot_disabled_checkpoint: |-
+      സന്ദേശമയച്ചതിന് നന്ദി. പൊതു തെരഞ്ഞെടുപ്പുകാലത്ത് പ്രചരിച്ച വ്യാജവസ്തുതകളെ കുറിച്ചുപഠിക്കുന്ന ചെക്ക് പോയിന്‍റ് എന്ന പദ്ധതിയുടെ ഭാഗമായി ഉപയോഗിച്ചിരുന്ന ടിപ് ലൈന്‍ ഇപ്പോള്‍ നിലവിലില്ല.
+      ആയതിനാല്‍ താങ്കള്‍ക്ക് പരിശോധനാ റിപ്പോര്‍ട്ട് അയക്കാനാവില്ലെന്ന് അറിയിക്കട്ടെ.
